feat(main-app): add react component into main

--- a/main-app/tsconfig.json
+++ b/main-app/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "ts-config-single-spa",
   "files": ["src/CamilleBuus-root-config.js"],
   "compilerOptions": {
+    "jsx": "react",
     "declarationDir": "dist"
   },
   "include": ["src/**/*"],
